<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/frameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Icon Search-->
    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_baseline_search_white_24px"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        tools:ignore="RtlHardcoded" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:listitem="@layout/item_user" />

    <!-- Show Other fab -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:tint="@color/white"
        app:backgroundTint="@color/gray_dark"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/menu" />

    <!-- Settings -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/fab_menu"
        app:layout_constraintEnd_toEndOf="@+id/fab_menu"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        app:tint="@color/white"
        android:contentDescription="@string/settings" />

    <!-- Favorite -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/fab_setting"
        app:layout_constraintEnd_toEndOf="@+id/fab_setting"
        app:srcCompat="@drawable/favorite_toggle"
        app:tint="@color/white"
        android:contentDescription="@string/favorite" />

    <LinearLayout
        android:id="@+id/lr_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="310dp"
            android:layout_height="310dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img" />

        <TextView
            android:id="@+id/home_title"
            style="@style/HomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_all_github_users" />

        <TextView
            android:id="@+id/home_sub_title"
            style="@style/HomeSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_find_all_github_users_in_search_field" />

    </LinearLayout>

    <!--ProgressBar Loading-->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>